--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.github.bjoernpetersen</groupId>
   <artifactId>jmusic-youtube</artifactId>
-  <version>0.4.0</version>
+  <version>0.5.0-SNAPSHOT</version>
   <url>https://github.com/BjoernPetersen/JMusic-YouTube</url>
   <description>TODO</description>
   <name>${project.groupId}:${project.artifactId}</name>
@@ -62,7 +62,7 @@
     <dependency>
       <groupId>com.github.bjoernpetersen</groupId>
       <artifactId>musicbot</artifactId>
-      <version>0.6.0</version>
+      <version>0.7.0-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
