--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,12 @@
       <version>v3-rev183-1.22.0</version>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>android</groupId>
+      <artifactId>android</artifactId>
+      <version>4.4.2_r4</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
   <build>
     <resources>
