--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.github.bjoernpetersen</groupId>
   <artifactId>jmusic-youtube</artifactId>
-  <version>0.7.1</version>
+  <version>0.8.0-SNAPSHOT</version>
   <url>https://github.com/BjoernPetersen/JMusic-YouTube</url>
   <description>TODO</description>
   <name>${project.groupId}:${project.artifactId}</name>
