--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.github.bjoernpetersen</groupId>
   <artifactId>jmusic-youtube</artifactId>
-  <version>0.8.0</version>
+  <version>0.9.0-SNAPSHOT</version>
   <url>https://github.com/BjoernPetersen/JMusic-YouTube</url>
   <description>TODO</description>
   <name>${project.groupId}:${project.artifactId}</name>
@@ -48,7 +48,7 @@
 
     <junit.version>4.12</junit.version>
     <jsr.version>3.0.2</jsr.version>
-    <musicbot.version>0.12.1</musicbot.version>
+    <musicbot.version>0.13.0-SNAPSHOT</musicbot.version>
     <youtubeapi.version>v3-rev183-1.22.0</youtubeapi.version>
     <android.version>4.4.2_r4</android.version>
   </properties>
