--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
 
     <junit.version>4.12</junit.version>
     <jsr.version>3.0.2</jsr.version>
-    <musicbot.version>0.13.0-SNAPSHOT</musicbot.version>
+    <musicbot.version>0.14.3</musicbot.version>
     <youtubeapi.version>v3-rev186-1.23.0</youtubeapi.version>
     <android.version>26</android.version>
   </properties>
