--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.github.bjoernpetersen</groupId>
-  <artifactId>jmusic-youtube</artifactId>
+  <artifactId>musicbot-youtube</artifactId>
   <version>0.10.0-SNAPSHOT</version>
   <url>https://github.com/BjoernPetersen/JMusic-YouTube</url>
   <description>TODO</description>
