--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,20 @@
 *.class
 
-# Package Files #
-*.jar
-*.war
-*.ear
-
-.*/
-!.circleci/
-bin/
-
-*.class
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
 
 # Package Files #
 *.jar
 *.war
 *.ear
 
-bin/
-/.apt_generated/
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+# IntelliJ #
+.idea/
+*.iml
+*.iws
 
 # Eclipse #
 .classpath
@@ -25,15 +22,14 @@ bin/
 .project
 .settings/
 
-# Intellij #
-.idea/
-*.iml
-*.iws
+# CircleCI
+.circle.yml
 
 # Mac #
 .DS_Store
 
 # Maven #
+log/
 target/
 pom.xml.tag
 pom.xml.releaseBackup
@@ -44,4 +40,11 @@ dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
 
-android/
+# Gradle #
+!gradle-wrapper.jar
+build/
+out/
+gradle.properties
+
+.*/
+!.circleci/
